--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 <body>
     <!-- Navigation -->
     <nav>
-        <div class="logo">📚 DIGITAL LIBRARY</div>
+        <div class="logo">📚 Smart_verse_books</div>
         <div class="nav-links">
             <a href="#home">Home</a>
             <a href="#library">Library</a>
@@ -923,5 +923,6 @@
                 }
             });
         }, observerOptions);
+
 
         document.
