--- a/index.html
+++ b/index.html
@@ -608,8 +608,10 @@
                             <div class="book-card-inner">
                                 <div class="book-3d">
                                     <div class="book-cover">
-                                        <div class="book-title">DIGITAL<br>MASTERY<br>IN YOUR<br>HANDS</div>
-                                        <div class="book-subtitle">Secrets to Full Control of Your Phone</div>
+                                       <div class="book-title">OCEAN<br>ODYSSEY</div>
+                                        <div class="book-subtitle">A journey to the deep</div>
+                                        <img src="e474540f-4ccb-400f-9720-8134ff2d9c36.jpg" alt="the book 1"
+                                            style="max-width: 70%; height: auto;">
                                     </div>
                                 </div>
                                 <div class="book-info">
@@ -926,6 +928,7 @@
 
 
         document.
+
 
 
 
