--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                                     <div class="book-cover">
                                        <div class="book-title">OCEAN<br>ODYSSEY</div>
                                         <div class="book-subtitle">A journey to the deep</div>
-                                        <img src="e474540f-4ccb-400f-9720-8134ff2d9c36.jpg" alt="the book 1"
+                                        <img src="blob:https://web.whatsapp.com/17c5437b-d990-4e12-b221-cf8dfb4a13ac"
                                             style="max-width: 70%; height: auto;">
                                     </div>
                                 </div>
@@ -928,6 +928,7 @@
 
 
         document.
+
 
 
 
